--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,6 +1,13 @@
 @import url(http://fonts.googleapis.com/css?family=Montserrat:400,700);
+
+
+@font-face {
+    font-family: 'Eurostile';
+    src: url("../fonts/Eurostile.ttf")  /* TTF file for CSS3 browsers */
+}
+
 body {
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Eurostile', Fallback, sans-serif;
   font-size: 14px;
   font-weight: 400;
   -webkit-box-sizing: border-box;
